# officer-snorlax-bot

./: .env_template  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini.template  bot.py  initdb.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3411c3047e1a_drop_admin_channel.py  9b7158520f28_create_guild_schedule_settings_table.py  c897b93f45ce_initial_tables.py  f8574e25d62d_add_last_message_id_to_close_and_open.py
cogs/: admin.py  any_raids_filter.py  fc_filter.py  initial.py  join_name_filter.py  management.py  misc.py  schedules.py  time_channel.py
cogs/utils/: autocompletes.py  checks.py  db.py  embeds.py  log_msgs.py  select_options.py  utils.py  views.py
