[tool.poetry]
name = "officer-snorlax-bot"
version = "1.2.0-dev"
description = "Officer Snorlax Discord bot created to open and close channels on a schedule."
authors = ["Adam Stewart"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^2.0.0"
pandas = "^1.4.3"
alembic = "^1.8.1"
python-dotenv = "^0"
aiosqlite = "^0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "^0"
black = "^23"
pre-commit = "^3.3.2"

[tool.black]
line-length = 88

[tool.ruff]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pydocstyle
    "D",
    # isort
    "I"
]

[tool.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.isort]
lines-between-types = 1

[tool.ruff.per-file-ignores]
"__init__.py" = ["D104"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
